# share

./: .gitignore  README.md  allocation_backtest.py  asset_catalog.py  build_site.py  dca_comparison.py  main.py  pyproject.toml  rolling_returns.py  run_allocation_backtest.py  test_signals.py  test_weights.py  uv.toml
.github/workflows/: publish.yml
docs/: index.html  methodology.html
docs/assets/: index.html  site.css
investlab/: __init__.py  __main__.py  cli.py  data.py  engine.py  metrics.py  models.py  momentum.py  strategies.py  strategy_template.py  utils.py
investlab/allocation/: __init__.py  backtest.py  calculator.py  signals.py  visualization.py
investlab/core/: __init__.py  asset_registry.py  price_loading.py
investlab/publish/: __init__.py  export_contract.py  report_registry.py  site_builder.py
investlab/rebalance/: __init__.py  data.py  engine.py  experiment.py  metrics.py  models.py  signals.py  statistics.py  strategies.py
investlab/scenarios/: __init__.py  annual_matrix.py  dca_comparison_core.py  dca_comparison_scenario.py  dca_matrix.py  framework_scenario.py  rebalance_scenario.py  registry.py  rolling_returns_core.py  rolling_returns_scenario.py
scripts/: export_watermarked_tables.mjs
tests/cli/: test_cli_commands.py  test_scenarios_cli.py
tests/core/: test_asset_registry.py  test_price_loading.py
tests/publish/: test_export_contract.py  test_report_registry.py  test_site_builder.py
tests/rebalance/: __init__.py  test_data_panels.py  test_engine.py  test_experiment.py  test_hybrid_strategies.py  test_metrics.py  (+4 more)
(+54 files in other folders)
